# classroom-face-detection

./: .gitignore  CMakeLists.txt  README.md
data/configFile/: config.json  setting.json
include/: BusyThreadContainer.h  ConfigRead.h  GraphUtils.h  IdleThreadContainer.h  MyTask.h  MyThread.h  MyThreadPool.h  Task.h  TaskContainer.h  cluster.hpp  common.hpp  config.hpp  face.hpp  jfda.hpp
mini-caffe/: CONTRIBUTORS.md
src/: BusyThreadContainer.cpp  ConfigRead.cpp  GraphUtils.cpp  IdleThreadContainer.cpp  MyTask.cpp  MyThread.cpp  MyThreadPool.cpp  face.cpp  jfda.cpp  main.cpp
